syntax = "proto3";

package streamer;

import "google/protobuf/empty.proto";

// StreamerNodeAPI is the API exposed by the streamer node
service StreamerNodeAPI {
  // SendEvent submits and event to the internal Flow Libp2p network
  rpc SendEvent(SendEventRequest) returns (google.protobuf.Empty);
  // Subscribe returns all network messages
  rpc Subscribe(SubscribeRequest) returns (stream FlowMessage);
}

message SubscribeRequest {}

message SendEventRequest {
  string channel_id = 1;
  bytes message = 2;
  repeated bytes targetID = 3;
}

message FlowMessage {
  bytes senderID = 1;
  bytes message = 2;
}
